--- a/report/report.tex
+++ b/report/report.tex
@@ -52,7 +52,7 @@
 \pagestyle{fancy}
 \fancyhf{}
 \setlength\headheight{15pt}
-\fancyhead[R]{Assignment 3}
+\fancyhead[R]{Assignment 4}
 %-------------------------------------------------------------------------------
 % TITLE PAGE
 %-------------------------------------------------------------------------------
@@ -66,15 +66,15 @@
 % \usepackage[letterpaper,top=2cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
 
-\title{Word Vectorization}
+\title{ELMO}
 
 \begin{document}
 
 \title{ \normalsize \textsc{\LARGE Introduction to Natural Language Processing}
 		\\ [2.0cm]
-        \LARGE Assignment 3 
+        \LARGE Assignment 4 
 		\HRule{0.5pt} \\
-		\LARGE \textbf{\uppercase{Word Vectorization}}
+		\LARGE \textbf{\uppercase{ELMO}}
 		\HRule{2pt} \\ [0.5cm]
 		\normalsize \vspace*{3\baselineskip}}
         \date{ }
@@ -84,8 +84,6 @@
 \maketitle
 
 \import{sections/}{introduction.tex}
-\import{sections/}{svd.tex}
-\import{sections/}{word2vec.tex}
 \import{sections/}{result.tex}
 \import{sections/}{conclusion.tex}
 
