--- a/report/sections/conclusion.tex
+++ b/report/sections/conclusion.tex
@@ -1,14 +1,6 @@
 \section*{Conclusion}
 \label{sec:conclusion}
 
-Overall, we can see that \verb|word2Vec| outperforms \verb|SVD| on the downstream task. It is also interesting to see that \verb|word2Vec| with context size 1, is similar to performance with \verb|SVD|, with context size 3. 
+Overall, the learable parameter performs better than when the model has fixed parameter, a learnable function also performs well, but isn't as good as the learnable parameter one, and also takes some more time to train due to a larget increase in the number of parameters. 
 
-Despite the clear domination in accuracy, it is not straightforward to choose between the two. For example, \verb|word2Vec| has a much higher accuracy, but also takes significantly more time to train. As seen from the following visualization :
-
-\begin{figure}[H]
-    \centering
-    \includesvg[width=0.5\textwidth]{../results/graphPerformance.svg}
-    \caption{Accuracy Comparison}
-\end{figure}
-
-The graph shows the time taken to prepare the two embeddings using same hardware, and it shows that although the \verb|word2Vec| model is much more accurate than \verb|SVD|, it is almost 10 times as slow. Whereas SVD has an inherent scaling issue that it scales quadratically with the vocab size, even with sparse matrix performance becomes an issue, so both these things need to be taken into account before procedding with the choice of embeddings.
+ELMO architecture, therefore, does outperform previous architectures with similar setting, however, it takes a longer time to train. Therefore, the choice of the underlying model depends on the tasks aat hand.
